--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,6 +13,7 @@
     <link rel="stylesheet" media="screen and (max-width:768px)" href="css/tablet.css">
     <link rel="stylesheet" media="screen and (max-width:500px)" href="css/mobile.css">
 </head>
+
 <body>
     <header>
         <p><i class="fas fa-stethoscope"></i>LIFE<span>CARE</span></p>
@@ -27,22 +29,24 @@
             Kaduna State, Nigeria</p>
 
         <div class="menu-wrap">
-        <input type="checkbox" class="toggler">
-        <div class="hamburger"><div></div></div>
-        <div class="menu">
-            <div>
+            <input type="checkbox" class="toggler">
+            <div class="hamburger">
+                <div></div>
+            </div>
+            <div class="menu">
                 <div>
-                    <ul>
-                        <li><a href="index.html">HOME</a></li>
-                        <li><a href="doctors.html">DOCTORS</a></li>
-                        <li><a href="services.html">SERVICES</a></li>
-                        <li><a href="departments.html">DEPARTMENTS</a></li>
-                        <li><a href="blog.html">BLOG</a></li>
-                        <li><a href="contact.html">CONTACT</a></li> 
-                    </ul>
+                    <div>
+                        <ul>
+                            <li><a href="index.html">HOME</a></li>
+                            <li><a href="doctors.html">DOCTORS</a></li>
+                            <li><a href="services.html">SERVICES</a></li>
+                            <li><a href="departments.html">DEPARTMENTS</a></li>
+                            <li><a href="blog.html">BLOG</a></li>
+                            <li><a href="contact.html">CONTACT</a></li>
+                        </ul>
+                    </div>
                 </div>
             </div>
-        </div>
         </div>
     </header>
 
@@ -64,10 +68,10 @@
                 <div style="background: url(images/img_bg_6.jpg) no-repeat center center/cover;" class="slide active">
                     <div>
                         <h1>Dr. Beatrice Prior</h1>
-                        <h2>Dr. Prior's Plastic Surgery Clinic Welcomes You!</h2> 
+                        <h2>Dr. Prior's Plastic Surgery Clinic Welcomes You!</h2>
                         <h3>Separated they live in Bookmarksgrove right at the coast of the
-                        <br> 
-                        <span>Semantics, a large language ocean.</span></h3>
+                            <br>
+                            <span>Semantics, a large language ocean.</span></h3>
                         <p><a href="appointment.html" class="btn">Make an Appointment</a></p>
                     </div>
                 </div>
@@ -75,27 +79,27 @@
                     <div>
                         <h1>Dr. Mark Bowman</h1>
                         <h2>Dr. Mark Bowman's Dental Clinic Welcomes You!</h2>
-                        <h3>Separated they live in Bookmarksgrove right at the coast of the 
-                        <br>
-                        <span>Semantics, a large language ocean.</span></h3>
+                        <h3>Separated they live in Bookmarksgrove right at the coast of the
+                            <br>
+                            <span>Semantics, a large language ocean.</span></h3>
                         <p><a href="appointment.html" class="btn">Make an Appointment</a></p>
                     </div>
                 </div>
                 <div style="background: url(images/img_bg_1.jpg) no-repeat center center/cover;" class="slide">
                     <div>
                         <h1>Have an Access to a Health <br> Professional at any time</h1>
-                        <h3>Separated they live in Bookmarksgrove right at the coast of the 
-                        <br>
-                        <span>Semantics, a large language ocean.</span></h3>
+                        <h3>Separated they live in Bookmarksgrove right at the coast of the
+                            <br>
+                            <span>Semantics, a large language ocean.</span></h3>
                         <p><a href="appointment.html" class="btn">Make an Appointment</a></p>
                     </div>
                 </div>
-                <div style="background: url(images/img_bg_2.jpg) no-repeat center center/cover;"  class="slide">
+                <div style="background: url(images/img_bg_2.jpg) no-repeat center center/cover;" class="slide">
                     <div>
                         <h1>Special offer! Free Consultation <br> this month only</h1>
-                        <h3>Separated they live in Bookmarksgrove right at the coast of the 
-                        <br>
-                        <span>Semantics, a large language ocean.</span></h3>
+                        <h3>Separated they live in Bookmarksgrove right at the coast of the
+                            <br>
+                            <span>Semantics, a large language ocean.</span></h3>
                         <p><a href="appointment.html" class="btn">Make an Appointment</a></p>
                     </div>
                 </div>
@@ -103,13 +107,14 @@
 
             <!-- Controls -->
             <div class="controls">
-                <div class="prev"><</div>
-                <div class="next">></div>
+                <div class="prev">
+                    <</div> <div class="next">>
+                </div>
             </div>
 
             <!-- Indicators -->
             <div class="indicator"></div>
-        </div>    
+        </div>
     </section>
 
     <div class="section-one">
@@ -120,9 +125,9 @@
     <div class="doctors-div">
         <h1>WELL EXPERIENCED DOCTORS</h1>
         <p>A list of our experienced doctors</p>
-        
+
         <div class="doctors-info">
-            <div> 
+            <div>
                 <img src="images/staff-4.jpg">
                 <br>
                 <h3>Dr. Beatrice Prior</h3>
@@ -136,7 +141,7 @@
             <div>
                 <img src="images/staff-2.jpg">
                 <br>
-                <h3>Dr. Edward Douglas</h3>             
+                <h3>Dr. Edward Douglas</h3>
                 <p>Orthopedic Surgeon</p>
                 <i></i>
                 <i></i>
@@ -175,4 +180,5 @@
     <script src="app.js" type="text/javascript"></script>
     <script src="UI.js" type="text/javascript"></script>
 </body>
+
 </html>
