--- a/contact.html
+++ b/contact.html
@@ -142,7 +142,7 @@
 
             <input type="submit" value="Send Message" class="btn btn-submit">
 
-            <div class="message-div"></div>
+            <div class="message-div contact-message-div"></div>
 
         </form>
     </div>
