--- a/index.html
+++ b/index.html
@@ -108,7 +108,8 @@
             <!-- Controls -->
             <div class="controls">
                 <div class="prev">
-                    <</div> <div class="next">>
+                    &lt;</div>
+                <div class="next">&gt;
                 </div>
             </div>
 
