--- a/appointment.html
+++ b/appointment.html
@@ -95,12 +95,12 @@
       <input type="number" placeholder="Your Contact Number" name="number" id="number" />
 
       <label for="select">Choose Your Subject</label>
-      <select name="select" id="select">
+      <select id="select">
         <option selected="selected" disabled="disabled">Choose Your Subject</option>
-        <option>Main Surgery</option>
-        <option>Plastic Surgery</option>
-        <option>Dental</option>
-        <option>Other</option>
+        <option name="select">Main Surgery</option>
+        <option name="select">Plastic Surgery</option>
+        <option name="select">Dental</option>
+        <option name="select">Other</option>
       </select>
 
       <label for="message">Message</label>
