--- a/contact.html
+++ b/contact.html
@@ -135,7 +135,7 @@
             <input type="number" placeholder="Your Contact Number" name="number" id="number">
 
             <label for="text">Subject</label>
-            <input type="text" placeholder="Why you are contacting us" name="subject" id="select">
+            <input type="text" placeholder="Why you are contacting us" name="select" id="select">
 
             <label for="textare">Message</label>
             <textarea placeholder="Say something about us" name="message" id="message"></textarea>
