--- a/appointment.html
+++ b/appointment.html
@@ -95,7 +95,7 @@
       <input type="number" placeholder="Your Contact Number" name="number" id="number" />
 
       <label for="select">Choose Your Subject</label>
-      <select name="select" id="select">
+      <select name="subject" id="select">
         <option selected="selected" disabled="disabled">Choose Your Subject</option>
         <option>Main Surgery</option>
         <option>Plastic Surgery</option>
