--- a/contact.html
+++ b/contact.html
@@ -134,11 +134,11 @@
             <label for="number">Contact Number</label>
             <input type="number" placeholder="Your Contact Number" name="number" id="number">
 
-            <label for="text">Subject</label>
+            <label for="select">Subject</label>
             <input type="text" placeholder="Why you are contacting us" name="select" id="select">
 
-            <label for="textare">Message</label>
-            <textarea placeholder="Say something about us" name="message" id="message"></textarea>
+            <label for="message">Message</label>
+            <textarea placeholder="Write something about yourself" name="message" id="message"></textarea>
 
             <input type="submit" value="Send Message" class="btn btn-submit">
 
