--- a/appointment.html
+++ b/appointment.html
@@ -18,13 +18,13 @@
   <header>
     <p><i class="fas fa-stethoscope"></i>LIFE<span>CARE</span></p>
     <p>
-      <i class="fas fa-phone"></i>
+      <i></i>
       08148733735
       <br />
       09028184344
     </p>
     <p>
-      <i class="fas fa-tag"></i>No 28, Gwaza Close,
+      <i></i>No 28, Gwaza Close,
       <br />
       Sabon Tasha, Kaduna,
       <br />
