--- a/contact.html
+++ b/contact.html
@@ -17,12 +17,12 @@
 <body>
     <header>
         <p><i class="fas fa-stethoscope"></i>LIFE<span>CARE</span></p>
-        <p><i class="fas fa-phone"></i>
+        <p><i></i>
             08148733735
             <br>
             09028184344
         </p>
-        <p><i class="fas fa-tag"></i>No 28, Gwaza Close,
+        <p><i></i>No 28, Gwaza Close,
             <br>
             Sabon Tasha, Kaduna,
             <br>
@@ -89,24 +89,24 @@
 
         <div class="contact-info">
             <div>
-                <p><i class="fas fa-tag"></i>No 28, Gwaza Close,
+                <p><i></i>No 28, Gwaza Close,
                     <br>
                     Sabon Tasha, Kaduna,
                     <br>
                     Kaduna State, Nigeria</p>
             </div>
             <div>
-                <p><i class="fas fa-phone"></i>
+                <p><i></i>
                     08148733735
                     <br>
                     09028184344
                 </p>
             </div>
             <div>
-                <p><i class="fas fa-letter"></i>lifecare@gmail.com</p>
+                <p><i></i>lifecare@gmail.com</p>
             </div>
             <div>
-                <p><i></i>lifecare.com</p>
+                <p><i></i>www.lifecare.com</p>
             </div>
         </div>
     </div>
