--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
 <body>
     <header>
         <p><i class="fas fa-stethoscope"></i>LIFE<span>CARE</span></p>
-        <p><i class="fas fa-phone"></i>
+        <p><i></i>
             08148733735
             <br>
             09028184344
         </p>
-        <p><i class="fas fa-tag"></i>No 28, Gwaza Close,
+        <p><i></i>No 28, Gwaza Close,
             <br>
             Sabon Tasha, Kaduna,
             <br>
@@ -133,8 +133,8 @@
                 <br>
                 <h3>Dr. Beatrice Prior</h3>
                 <p>Dental Hygienist</p>
-                <i class="fas fa-facebook"></i>
-                <i></i class="fas fa-twitter">
+                <i></i>
+                <i></i>
                 <i></i>
                 <i></i>
             </div>
