--- a/departments.html
+++ b/departments.html
@@ -17,12 +17,12 @@
 <body>
     <header>
         <p><i class="fas fa-stethoscope"></i>LIFE<span>CARE</span></p>
-        <p><i class="fas fa-phone"></i>
+        <p><i></i>
             08148733735
             <br>
             09028184344
         </p>
-        <p><i class="fas fa-tag"></i>No 28, Gwaza Close,
+        <p><i></i>No 28, Gwaza Close,
             <br>
             Sabon Tasha, Kaduna,
             <br>
